Add wallet connect

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,4 +19,13 @@
     </div>
 
 
+    <div class="btn-cont">
+        <button mat-flat-button color="secondary" (click)="initializeWalletConnect()">Wallet Connect</button>
+    </div>
+
+    <div class="btn-cont">
+        <button mat-flat-button color="secondary" (click)="sendWalletCOnnect()">Send Wallet Connect</button>
+    </div>
+
+
 </div>
